# native-sea

./: .gitignore  MIGRATION.instructions.md  README.md  eslint.config.mjs  expo-module.config.json  index.js  package-lock.json  package.json
.github/instructions/: MIGRATION.instructions.md
android/: build.gradle
android/legacy/: SEASign.kt
android/src/main/cpp/: CMakeLists.txt  digest.cpp  native_seacrypto.cpp  native_seapair.cpp  native_seasign.cpp  pbkdf2.cpp
android/src/main/java/expo/modules/nativesea/: NativeSeaModule.kt  SEACrypto.kt  SEAPair.kt  SEASecret.kt  SEASign.kt  SEAUtil.kt  SEAWork.kt
e2e/: .gitignore  eslint.config.mjs  index.js  metro.config.js  moniker.config.js  package-lock.json  package.json
e2e/__e2e_tests__/: _00_gun_setup.js  _01_pair.js  _01_random_hash.js  _02_random_hash.js  _02_work_pbkdf2.js  _03_pair.js  _03_work_pbkdf2.js  _04_secret.js  _05_sign_verify.js  _06_encrypt_decrypt.js  config.js
e2e/gun_webview_test/: host.js  index.js  worker.js
other_impl/: enc.js  native-sea-maybe.js  sea.elliptic.forge.js
scripts/: emulator.sh
src/: NativeSeaModule.js
